# FMD_CMAKE_Tutorial

./: .gitignore  README.md
01-OneFileProject/: CMakeLists.txt  README.md  main.c
02-MultpleFileOnRootFolder/: CMakeLists.txt  doubleFunction.c  doubleFunction.h  main.c
03-MultpleFileOnRootFolder_SharedLib/: CMakeLists.txt  main.c  printFunction.c  printFunction.h
04-src_and_include_directories/: CMakeLists.txt  README.md
04-src_and_include_directories/include/: function01.h  function02.h
04-src_and_include_directories/src/: function01.c  function02.c  main.c
